// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphicsResult.vue renders re-renders after charts data changes 1`] = `
<div class="graphics-results">
  <div class="graphics-results__wrapper">
    <h2 class="graphics-results__title">
      some specific text
      <!---->
    </h2>
    <p>
      some specific text
      <a target="_blank" href="https://docs.ilhasoft.mobi/l/en/testing-category/testing-your-intelligence#results">some specific text</a>.
    </p>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        some specific text
      </h3>
      <p> some specific text </p>
      <p>
        some specific text
        <a target="_blank" href="https://docs.ilhasoft.mobi/l/en/testing-category/testing-your-intelligence#precision_and_recall_reports">some specific text</a>.
      </p>
    </div>
    <div>
      <h5 class="graphics-results__title">
        some specific text
      </h5>
      <!----> <canvas id="intentsChart" class="graphics-results__charts"></canvas>
    </div>
    <div>
      <h5 class="graphics-results__title">
        some specific text
      </h5>
      <!----> <canvas id="entitiesChart" class="graphics-results__charts"></canvas>
    </div>
  </div>
  <div>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        some specific text
      </h3>
      <p>
        some specific text
        <a target="_blank" href="https://docs.ilhasoft.mobi/l/en/testing-category/testing-your-intelligence#intent_confusion_matrix">some specific text</a>.
      </p>
    </div>
    <div class="graphics-results__charts">
      <div class="graphics-results__charts__loading">
        <loading-stub></loading-stub>
      </div>
      <!---->
    </div>
  </div>
  <div>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        some specific text
      </h3>
      <p>some specific text</p>
      <p>some specific text
        <a target="_blank" href="https://docs.ilhasoft.mobi/l/en/testing-category/testing-your-intelligence#intent_confidence_distribution">some specific text</a>.
      </p>
    </div>
    <div class="graphics-results__charts">
      <div class="graphics-results__charts__loading">
        <loading-stub></loading-stub>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`GraphicsResult.vue renders renders 1`] = `
<div class="graphics-results">
  <div class="graphics-results__wrapper">
    <h2 class="graphics-results__title">
      some specific text
      <!---->
    </h2>
    <p>
      some specific text
      <a target="_blank" href="https://docs.ilhasoft.mobi/l/en/testing-category/testing-your-intelligence#results">some specific text</a>.
    </p>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        some specific text
      </h3>
      <p> some specific text </p>
      <p>
        some specific text
        <a target="_blank" href="https://docs.ilhasoft.mobi/l/en/testing-category/testing-your-intelligence#precision_and_recall_reports">some specific text</a>.
      </p>
    </div>
    <div>
      <h5 class="graphics-results__title">
        some specific text
      </h5>
      <div class="graphics-results__charts__loading">
        <loading-stub></loading-stub>
      </div> <canvas id="intentsChart" class="graphics-results__charts"></canvas>
    </div>
    <div>
      <h5 class="graphics-results__title">
        some specific text
      </h5>
      <div class="graphics-results__charts__loading">
        <loading-stub></loading-stub>
      </div> <canvas id="entitiesChart" class="graphics-results__charts"></canvas>
    </div>
  </div>
  <div>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        some specific text
      </h3>
      <p>
        some specific text
        <a target="_blank" href="https://docs.ilhasoft.mobi/l/en/testing-category/testing-your-intelligence#intent_confusion_matrix">some specific text</a>.
      </p>
    </div>
    <div class="graphics-results__charts">
      <!----> <img src="https://s3.amazonaws.com/bothub-sample/confmat.png" alt="chart1"></div>
  </div>
  <div>
    <div class="graphics-results__info">
      <h3 class="graphics-results__title">
        some specific text
      </h3>
      <p>some specific text</p>
      <p>some specific text
        <a target="_blank" href="https://docs.ilhasoft.mobi/l/en/testing-category/testing-your-intelligence#intent_confidence_distribution">some specific text</a>.
      </p>
    </div>
    <div class="graphics-results__charts">
      <!----> <img src="https://s3.amazonaws.com/bothub-sample/hist.png" alt="chart2"></div>
  </div>
</div>
`;
